Adds splittest javascript, css and related libraries.

--- a/templates/coolblue-static.html
+++ b/templates/coolblue-static.html
@@ -71,7 +71,7 @@
         }
     </style>
 
-    <link rel="stylesheet" href="static/css/selector.css" type="text/css"/>
+    <link rel="stylesheet" href="lib/splittester/splittester.css" type="text/css"/>
 
     <script type="application/ld+json">
 {
@@ -6016,6 +6016,6 @@
     });
 });</script>
 </body>
-<script src="static/js/selector.js"></script>
-<script src="static/js/splittester.js"></script>
+<script src="lib/jquery-modal/jquery.modal.min.js"></script>
+<script src="lib/splittester//splittester.js"></script>
 </html>
