Adds saving tests and variants to database.

--- a/templates/coolblue-static.html
+++ b/templates/coolblue-static.html
@@ -71,7 +71,7 @@
         }
     </style>
 
-    <link rel="stylesheet" href="lib/splittester/splittester.css" type="text/css"/>
+    <link rel="stylesheet" href="/templates/lib/splittester/splittester.css" type="text/css"/>
 
     <script type="application/ld+json">
 {
@@ -290,7 +290,7 @@
                     <div class="grid-row front-page--row front-page--intro">
                         <div class="front-page--leaderboards grid-col-mobile-4 grid-col-tablet-6 grid-col-desktop-9 grid-col-tablet-push-2 grid-col-desktop-push-3">
                             <div class="leaderboards js-leaderboard alt-with-specialist">
-                                <ul class="leaderboard--items">
+                                <ul class="leaderboard--items"  id="hackathonTest1">
                                     <li class="leaderboard--item">
                                         <a class="leaderboard--item-link leaderboard--item0"
                                            data-trackclickevent="Frontpage leaderboards, Position 0, Pre-order Iphone 6s"
@@ -4494,7 +4494,7 @@
                                                    title="Meer informatie over verzending en bezorging"
                                                         >
                                                     <i class="icon icon-circle-checkmark icon-position-absolute icon-size-M usp-list--icon"></i>
-                                                    <strong class="free">Gratis</strong> verzending
+                                                    <strong class="free" id="hackathonTest2">Gratis</strong> verzending
                                                 </a>
                                             </li>
                                             <li class="usp-list--item">
@@ -6016,6 +6016,6 @@
     });
 });</script>
 </body>
-<script src="lib/jquery-modal/jquery.modal.min.js"></script>
-<script src="lib/splittester//splittester.js"></script>
+<script src="/templates/lib/jquery-modal/jquery.modal.min.js"></script>
+<script src="/templates/lib/splittester/splittester.js"></script>
 </html>
