--- a/templates/lib/splittester/splittester.css
+++ b/templates/lib/splittester/splittester.css
@@ -42,7 +42,7 @@
     float: left;
     background: rgba(90, 90, 90, 0.9);
     width: 30%;
-    height: 96%;
+    height: 88%;
     padding: 10px 5px;
 }
 
@@ -94,10 +94,14 @@
 
 #splittest-modal-bar {
     clear: both;
-    width: 95%;
     height: 10px;
     cursor: pointer;
     color: white;
     text-align: right;
-    padding: 15px;
+    padding: 11px 7px;
+}
+
+.close-modal, .close-modal:hover {
+    text-decoration: none;
+    color: white;
 }
