--- a/templates/lib/splittester/splittester.css
+++ b/templates/lib/splittester/splittester.css
@@ -18,7 +18,6 @@
 }
 
 .selected-split-test {
-    /*background-color: rgba(60,60,90,0.8) !important; */
     border: blue 4px solid;
     z-index: 99999999 !important;
 }
@@ -28,16 +27,15 @@
     height: 520px;
     margin: 0 auto;
     display: none;
-    background: rgba(100, 100, 100, 0.9);
-    z-index: 99999999999 !important;
+    background: white;
+    z-index: 99999999999999 !important;
 }
 
 #splittest-modal-menu {
     float: left;
-    background: rgba(90, 90, 90, 0.9);
-    width: 30%;
+    background: #F0F0F0;
+    width: 28%;
     height: 88%;
-    padding: 10px 5px;
 }
 
 #splittest-modal-code {
@@ -50,52 +48,93 @@
 #splittest-modal-variants {
     clear: both;
     width: 100%;
-    color: white;
+    color: black;
     height: 90%;
 }
 
 #splittest-modal-button-add {
-    clear: both;
-    width: 100%;
-    height: 10%;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    text-align: center;
-    border: white 2px solid;
-    vertical-align: middle;
+    color: #0F7BDC !important;
 }
 
 #splittest-modal-input {
     background-color: transparent;
-    height: 95%;
-    width: 100%;
-    color: white;
+    height: 85%;
+    width: 114%;
+    color: black;
     border: none;
 }
 
-.splittest-modal-variant {
+.splittest-modal-variant, #splittest-modal-button-add {
     clear: both;
-    width: 100%;
-    height: 25px;
-    color: white;
+    width: 95%;
+    line-height: 40px;
+    color: black;
     font-size: 11px;
-    text-align: center;
-    border: white 2px solid;
     vertical-align: middle;
     cursor: pointer;
+    padding-left: 10px;
 }
 
-#splittest-modal-bar {
-    clear: both;
+.splittest-modal-top-item {
     height: 10px;
     cursor: pointer;
     color: white;
-    text-align: right;
-    padding: 11px 7px;
+    float: right;
+    margin-top: 5px;
+    padding: 8px 20px;
+    margin-right: 10px;
 }
 
-.close-modal, .close-modal:hover {
+#splittest-modal-top-bar {
+    width: 97.2%;
+    clear: both;
+    float: left;
+    background-color: #0F7BDC;
+    padding: 2px 10px;
+}
+
+#splittest-modal-title {
+    float: left;
+    color: white;
+    font-weight: bold;
+    padding: 10px 0;
+}
+
+#splittest-modal-save {
+    background: #285dab;
+    background-clip: padding-box;
+    border: 1px solid #1e4680;
+    border-radius: 3px;
+    box-shadow: inset 0 -2px 0 0 #1e4680;
+    display: inline-block;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 13px;
+    height: auto;
+    line-height: 40px;
+    outline: none;
+    text-align: center;
+    text-decoration: none;
+    transition: background .1s linear;
+    padding: 0px 20px !important;
+}
+
+#splittest-modal-save:hover, #splittest-modal-save:focus {
+    background: #1e4680;
+    border-color: #036;
+    box-shadow: inset 0 -2px 0 0 #036;
+    color: #fff;
+    text-decoration: none
+}
+
+#splittest-modal-save {
+
+}
+
+#splittest-modal-close {
+}
+
+#splittest-modal-close a, #splittest-modal-close a:hover {
     text-decoration: none;
     color: white;
 }
@@ -130,4 +169,8 @@
 #splittest-menu a, #splittest-menu a:hover {
     color: black;
     text-decoration: none;
+}
+
+.jquery-modal.blocker {
+    z-index: 999999999 !important;
 }
