--- a/templates/topBar/topbar.html
+++ b/templates/topBar/topbar.html
@@ -1,22 +1,43 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Line Chart</title>
-        <link rel="stylesheet" href="templates/topBar/style/style.css">	</head>
-	<body>
-        <div class="top-bar">
-	        <form method="get">
-	        <ul>
-            <li class="testname"><div class="test-header">SplitTest</div><div class="test-live">Live since: 12-09-2015</div></li>
+<head>
+    <title>Coolblue Hackathon 2015! | Demo</title>
+    <link rel="stylesheet" href="/templates/topBar/style/style.css">
+</head>
+<body>
+<div class="top-bar">
+    <form method="get">
+        <ul>
+            <li class="testname">
+                <div class="test-header">SplitTest</div>
+                <div class="test-live">Live since: 12-09-2015</div>
+            </li>
             <li class="active">Variants</li>
             <li>Stats</li>
             <li>Config</li>
-	        <li><input type="text" name="url" size="60" value="{{ url }}" /></li>
-		        <li><input type="submit" value="GO"/></li>
+            <li><input type="text" id="url" size="60" value="{{ url }}"/></li>
+            <li><input type="submit" id="urlButton" value="GO"/></li>
         </ul>
-		        </form>
-            <div class="new-button">Start new test</div>
-        </div>
-		<iframe style="margin-top:51px" width="100%" height="2000px" frameborder="0" src="{{ host }}">asd</iframe>
-	</body>
+    </form>
+    <div class="new-button">Start new test</div>
+</div>
+
+<iframe style="margin-top:51px" width="100%" height="2000px" frameborder="0" src="{{ host }}"></iframe>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+</body>
 </html>
+
+<script>
+    $(function () {
+
+        $("#urlButton").click(function (event) {
+            event.preventDefault();
+
+            var url = "http://hackathon2015.coolblue/external/" + encodeURI($("#url").val());
+
+            $("iframe").attr("src", url);
+        });
+
+    });
+</script>
