--- a/templates/topBar/style/style.css
+++ b/templates/topBar/style/style.css
@@ -18,14 +18,14 @@ body {
     right: 0;
     height: 50px;
     background-color: #C2E3F7;
-    border-bottom: 1px solid #132863;
+    /*border-bottom: 1px solid #132863;*/
 }
 
 ul{
     list-style-type: none;
     margin: 0px;
     padding: 0px;
-    
+
 }
 li {
     float: left;
@@ -60,13 +60,13 @@ li.testname {
     color: #878787;
 }
 li:hover {
-    background-color: #B7D5E8;  
+    background-color: #B7D5E8;
 }
 li.active {
-    background-color: #0E7BDC;
+    background-color: #0090e3;
     color: white;
 }
-    
+
 .new-button {
     float: right;
     background: #285dab;
@@ -88,7 +88,7 @@ li.active {
     transition: background .1s linear;
     margin-top: 5px;
     padding: 0px 20px;
-    margin-right: 10px; 
+    margin-right: 10px;
 }
 
 .new-button:hover, .new-button:focus {
@@ -99,8 +99,64 @@ li.active {
     text-decoration: none
 }
 
+.new-button-flat {
+    float: right;
+    background: #285dab;
+    background-clip: padding-box;
+    /*border: 1px solid #1e4680;*/
+    border:0;
+    border-radius: 0 4px 4px 0;
+    /*box-shadow: inset 0 -2px 0 0 #1e4680;*/
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 13px;
+    height: auto;
+    line-height: 42px;
+    outline: none;
+    text-align: center;
+    text-decoration: none;
+    transition: background .1s linear;
+    /*margin-top: 5px;*/
+    padding: 0px 40px;
+    margin-right: 10px;
+}
+
+.new-button-flat:hover,
+.new-button-flat:focus {
+    background: #1e4680;
+    border-color: #036;
+    box-shadow: inset 0 -2px 0 0 #036;
+    color: #fff;
+    text-decoration: none
+}
+
+
 .action:active, .cta-button:active, .action:visited:active, .cta-button:visited:active {
     padding: 1.5rem 2rem 1.3rem;
     box-shadow: none
 }
 
+.top-bar li:last-child {
+    float:right;
+    padding: 0;
+}
+
+:focus {
+    outline: none;
+}
+
+.top-bar input[type="text"] {
+    padding:12px;
+    font-size: 16px;
+    border:none;
+    width: 600px;
+    border-radius: 4px 0 0 4px;
+}
+
+.top-bar input[type="text"]:focus {
+    border: 1px solid #285dab;
+    padding:11px;
+}
