--- a/templates/topBar/topbar.html
+++ b/templates/topBar/topbar.html
@@ -15,14 +15,16 @@
             <li class="active">Variants</li>
             <li>Stats</li>
             <li>Config</li>
-            <li><input type="text" id="url" size="60" value="{{ url }}"/></li>
-            <li><input type="submit" id="urlButton" value="GO"/></li>
+            <li>
+                <input type="text" id="url" size="60" value="{{ url }}"/>
+                <input type="submit" class="new-button-flat" id="urlButton" value="GO"/>
+            </li>
         </ul>
     </form>
-    <div class="new-button">Start new test</div>
+    <!--<div class="new-button">Start new test</div>-->
 </div>
 
-<iframe style="margin-top:51px" width="100%" height="2000px" frameborder="0" src="{{ host }}"></iframe>
+<iframe style="margin-top:50px" width="100%" height="2000px" frameborder="0" src="{{ host }}"></iframe>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
